# Farmenv-AI-OpenENV

./: .force_refresh  Dockerfile  agent.py  app.py  farm_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
static/: style.css
