[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmenv-ai"
version = "1.0.0"
description = "Farm environment for AI agent"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "flask-cors", 
    "numpy",
    "requests",
    "openai"
]

[project.scripts]
inference = "inference:predict"
