[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farmenv-ai-openenv"
version = "1.0.0"
description = "OpenEnv Smart Farm environment for AI agent learning"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "numpy",
    "requests",
    "gunicorn",
    "openai",
]

[tool.openenv]
name = "farmenv-ai-openenv"
version = "1.0.0"
entry_point = "app.py"
